# Customer-Churn-Prediction-ML-Demo-Project-Structure

./: .dockerignore  Dockerfile  Makefile  README.md  app.py  compose.yml  pyproject.toml
.github/workflows/: ci.yml
customer_churn_prediction/config/: config.yml
customer_churn_prediction/data/: 02-preprocessed-data.csv  03-train.csv  04-test.csv  05-final-churn-model.joblib  06-feature-names.joblib
customer_churn_prediction/notebooks/: 01-data-preprocessing.ipynb  02-train-test-split.ipynb  03-exploration-tuning.ipynb
customer_churn_prediction/src/: preprocessing.py
