[project]
name = "churn-prediction-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "swanpyaesone26",email = "joyboyop69@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
